--- a/src/App.css
+++ b/src/App.css
@@ -34,16 +34,18 @@
 ::-webkit-scrollbar {
   width: 5px; /* Ancho de la barra de desplazamiento */
   border-radius: 5px;
+
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f11e; /* Color del fondo de la barra de desplazamiento */
+  background-color: transparent; /* Color del fondo de la barra de desplazamiento */
   border-radius: 5px;
+
 
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #88888854; /* Color del pulgar de la barra de desplazamiento */
+  background-color: #88888893; /* Color del pulgar de la barra de desplazamiento */
   border-radius: 5px; /* Radio de borde del pulgar */
 }
 
@@ -71,4 +73,8 @@
 
 input::placeholder{
   color:rgb(77, 77, 77);
+}
+
+.main-aside{
+  margin-left: 2px;
 }
