--- a/src/App.css
+++ b/src/App.css
@@ -49,14 +49,14 @@
   border-radius: 5px; /* Radio de borde del pulgar */
 }
 
-.main {
+.main, .about-me {
   background-color: rgba(199, 199, 199, 0.315);
   border-radius: 12px;
 }
 .header{
   background-color: rgba(199, 199, 199, 0.315);
-
 }
+
 
 .borde{
   border-color: rgba(255, 255, 255, 0.281);
