--- a/src/App.css
+++ b/src/App.css
@@ -26,35 +26,64 @@
 
 .main{
   backdrop-filter: blur(8px);
+  
+  
 
 }
 
 
 
 ::-webkit-scrollbar {
-  width: 5px; /* Ancho de la barra de desplazamiento */
-  border-radius: 5px;
+  width: 0px; /* Ancho de la barra de desplazamiento */
+  border-radius: 0px;
 
 }
 
 ::-webkit-scrollbar-track {
   background-color: transparent; /* Color del fondo de la barra de desplazamiento */
-  border-radius: 5px;
+  border-radius: 0px;
 
 
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #88888893; /* Color del pulgar de la barra de desplazamiento */
-  border-radius: 5px; /* Radio de borde del pulgar */
+  border-radius: 0px; /* Radio de borde del pulgar */
 }
 
 .main, .about-me {
-  background-color: rgba(199, 199, 199, 0.315);
-  border-radius: 12px;
+  background-color: rgba(199, 199, 199, 0.555);
 }
+
 .header{
-  background-color: rgba(199, 199, 199, 0.315);
+  border-top: solid 1px rgba(255, 255, 255, 0.164);
+  background-color: rgba(49, 49, 49, 0.74);
+
+  z-index: 999999999999999999;
+}
+
+@media screen and (min-width:640px) {
+  .header{
+    background-color: rgba(199, 199, 199, 0.315);
+    border-radius: 12px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 5px; /* Ancho de la barra de desplazamiento */
+    border-radius: 5px;
+  
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent; /* Color del fondo de la barra de desplazamiento */
+    border-radius: 5px;
+  
+  
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #88888893; /* Color del pulgar de la barra de desplazamiento */
+    border-radius: 5px; /* Radio de borde del pulgar */
+  }
 }
 
 
@@ -78,3 +107,4 @@ input::placeholder{
 .main-aside{
   margin-left: 2px;
 }
+
