--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,11 +54,22 @@
   background-color: rgba(199, 199, 199, 0.555);
 }
 
-.header{
-  border-top: solid 1px rgba(255, 255, 255, 0.164);
-  background-color: rgba(49, 49, 49, 0.74);
 
-  z-index: 999999999999999999;
+
+@media screen and (max-width:640px){
+  .header{
+    border-top: solid 1px rgba(255, 255, 255, 0.164);
+    background-color: rgba(49, 49, 49, 0.74);
+    height: 50px;
+    z-index: 999999999999999999;
+    
+    position:fixed;
+    bottom: 0;
+  }
+  .header_space{
+    height: 40px;
+    width: 100vw;
+  }
 }
 
 @media screen and (min-width:640px) {
@@ -100,8 +111,12 @@
 
 }
 
-input::placeholder{
+input::placeholder, textarea::placeholder{
   color:rgb(77, 77, 77);
+}
+
+textarea{
+  resize: none;
 }
 
 .main-aside{
